--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </div>
 
 <!-- Música -->
-<audio id="celebrationMusic" src="Francisco.mp3" preload="auto"></audio>
+<audio id="celebrationMusic" src="Francisco Gómez - El Cumpleaños De Mi Madre (Video Oficial)  El Nuevo Rey De La Música Popular.mp3" preload="auto"></audio>
 
 <script>
   function startQuiz(){
